installationDoc/Raspberry/udev_rules/udev_pi23/ipTables/Ln-iptables_01.txt
# Generated by iptables-save v1.4.14 on Tue Apr 14 07:43:49 2015
# sudo bash -c 'iptables-save > /home/pi/Loreto/conf/iptables'
# sudo iptables-restore < /home/pi/Loreto/conf/iptables

# -----------------------------------------
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT

# -----------------------------------------
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT

# - don’t accept any incoming network traffic unless a following rule overrides it.
# -----------------------------------------
*filter
:INPUT DROP
# - accept any forwarding requests
# :FORWARD ACCEPT
:FORWARD DROP
# - allow any outbound network traffic
:OUTPUT ACCEPT

# :INBOUND_ETH - [0:0]
:LOG_CHAIN  - [0:0]
:LOG_DROP   - [0:0]
:LOG_ACCEPT - [0:0]

# :OUTBOUND - [0:0]

-A LOG_ACCEPT -j LOG --log-prefix "INPUT:ACCEPT:" --log-level 6
-A LOG_ACCEPT -j ACCEPT

-A LOG_DROP -j LOG --log-prefix "INPUT:DROP:" --log-level 6
-A LOG_DROP -j DROP


# loopback abd generic
-A INPUT -i lo -j ACCEPT
# -A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j LOG_ACCEPT
# -A INPUT -p icmp -m icmp --icmp-type 0 -m limit --limit 1/sec -j LOG_ACCEPT
# -A INPUT -p udp -m udp --dport 33434 -j LOG_CHAIN
# -A INPUT -p icmp -m icmp --icmp-type 3/1 -j LOG_ACCEPT
-A INPUT -p icmp -j LOG_CHAIN
-A INPUT -d 255.255.255.255 -i eth0 -j DROP
-A INPUT -s 255.255.255.255 -j DROP
-A INPUT -d 0.0.0.0 -j DROP
-A INPUT -m state --state INVALID -j DROP
# -A INPUT -f -m limit --limit 10/min -j LOG_CHAIN
# -A INPUT -i eth0 -j INBOUND_ETH
# -A INPUT -j LOG --log-prefix "[LN-iptables : Unknown Input] " --log-level 6
-A OUTPUT -j ACCEPT


################## S e r v i c e s #####################################
# -------------------------------------------------
# - SSH from anywhere
# -------------------------------------------------
-A INPUT -p tcp -m tcp -m state --state NEW,RELATED,ESTABLISHED --dport 22 -j ACCEPT
# -A OUTPUT  -o eth0 -p tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT

# -------------------------------------------------
# - generic INBOUND policies
# -------------------------------------------------
# - allow inbound access to any internally generated requests
-A INPUT -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT
# - allow any connections from the local host
-A INPUT -i lo -j ACCEPT
# - allow all traffic from the internal network
-A INPUT -s 192.168.0.0/24 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -j ACCEPT

# - ??? block any traffic to port 22 (ssh) coming from your firewall
# -A INPUT -s 192.168.0.1/32 -i tcp -p tcp -m tcp –dport 22 -j DROP

# -------------------------------------------------
# - porta per il netcat
# -------------------------------------------------
# -A INPUT -s 10.1.12.43/32  -d 10.1.12.49 -p tcp -m tcp -m state --state NEW,RELATED,ESTABLISHED -m multiport --dports 6666 -j ACCEPT

# - allow all traffic via port http and https
-A INPUT -p tcp -m tcp -m state --state NEW,RELATED,ESTABLISHED -m multiport --dports 80,443 -j ACCEPT
# -A INPUT -i eth0 -p tcp -m tcp –dport 80  -j ACCEPT
# -A INPUT -i eth0 -p tcp -m tcp –dport 443 -j ACCEPT

# - allow all traffic via port 5901 (VNC)
# -A INPUT -p tcp -m tcp –-dport 5901 -j LOG_ACCEPT




# *********  G O T O      Logger Section *************
-A INPUT -j LOG_CHAIN

-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1/sec -j LOG --log-prefix "[FW CTools: SYN Inbound] " --log-level 6
# -------------------------------------------------
# LOGGER Section
# -------------------------------------------------
-A LOG_CHAIN -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1/sec -j LOG --log-prefix "[FW CTools: SYN Inbound] " --log-level 6
-A LOG_CHAIN -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j DROP
-A LOG_CHAIN -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -m limit --limit 1/sec -j LOG --log-prefix "[FW CTools: RST Inbound] " --log-level 6
-A LOG_CHAIN -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -j DROP
-A LOG_CHAIN -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j LOG --log-prefix "[FW CTools: ICMP > 1/sec] " --log-level 6
-A LOG_CHAIN -p icmp -m icmp --icmp-type 8 -j DROP
-A LOG_CHAIN -m limit --limit 5/sec -j LOG --log-prefix "[FW CTools: > 5/sec] " --log-level 6
-A LOG_CHAIN -j DROP

COMMIT

# This will tell our Pi to start iptables before network starts.
# pre-up iptables-restore < /home/pi/Loreto/conf/Ln-iptables
